Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
12.3
-
Can result in unexpected behaviour
-
The IS [NOT] JSON operation can be killed with KILL QUERY and now respects the max_statement_time with correct error messages if that occurs
Description
12.3 json functions need to be killable/timeout.
Functions added in 12.3:
- IS_JSON
Like MDEV-28404 they need:
- je.killed_ptr assignment after json_scan_start where the is a function to json_scan_next used within the Item
- Remove check_killed() if present - handled by report_json_error.
- JSON_DO_PAUSE_EXECUTION(thd, 0.0002); in Item_function::val*
- json library functions to end up in report_json_error(js, &je, 0); immediately after error, and return null.
- add to func_json_notembedded.test - ensure result file is the timeout error.
Attachments
Issue Links
- is blocked by
-
MDEV-28404 JSON functions don't respect KILL QUERY / max_statement_time limit / recusion depth #2
-
- Closed
-
- relates to
-
MDEV-37072 Support for IS JSON predicate
-
- Closed
-
-
MDEV-39742 11.4 JSON functions not interuptable
-
- Closed
-