MDEV-39743: IS JSON was not interuptable

The IS JSON predicate in a query wasn't able to be killed,
and could exceed the max_statement_time of a query.

Introduce the mechanics so that a killed query would
result in the correct error.